panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__linkage__test_error_redeclared_with_different_linkage.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `x` redeclared as extern but was originally declared as static
   ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:2:5]
   │
 1 │ static int x;
   │            ┬  
   │            ╰── previously declared here as static
 2 │ int x;
   │     ┬  
   │     ╰── extern declaration here
───╯

Error: `y` redeclared as static but was originally declared as extern
   ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:5:12]
   │
 4 │ int y();
   │     ┬  
   │     ╰── previously declared here as extern
 5 │ static int y();
   │            ┬  
   │            ╰── static declaration here
───╯

Error: duplicate definition for `x`
   ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:8:16]
   │
 7 │ int f(int x) {
   │           ┬  
   │           ╰── previously defined here
 8 │     static int x;
   │                ┬  
   │                ╰── duplicate definition
───╯

Error: `z` redeclared as static but was originally declared as extern
    ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:14:16]
    │
 13 │     extern int z;
    │                ┬  
    │                ╰── previously declared here as extern
 14 │     static int z;
    │                ┬  
    │                ╰── static declaration here
────╯

Error: duplicate definition for `w`
    ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:17:9]
    │
 16 │     static int w;
    │                ┬  
    │                ╰── previously defined here
 17 │     int w;
    │         ┬  
    │         ╰── duplicate definition
────╯

Error: `v` redeclared as extern but was originally declared as local
    ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:20:16]
    │
 19 │     int v;
    │         ┬  
    │         ╰── previously declared here as local
 20 │     extern int v;
    │                ┬  
    │                ╰── extern declaration here
────╯

Error: `u` redeclared as static but was originally declared as extern
    ╭─[panko/tests/cases/linkage/test_error_redeclared_with_different_linkage.c:23:16]
    │
 22 │     extern int u;
    │                ┬  
    │                ╰── previously declared here as extern
 23 │     static int u;
    │                ┬  
    │                ╰── static declaration here
────╯
